--- a/kazi-skillset-client/src/index.css
+++ b/kazi-skillset-client/src/index.css
@@ -1,18 +1,37 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(/src/images/background2.webp);
-  background-size: cover;
+ 
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.section-1{
+  background-size: cover;
+  background-image: url(/src/images/background2.webp);
+  width: 100%;
+  min-height: 600px;
+  margin-top: -60px;
+ 
+}
+
+
+.section-2{
+  padding-top: 10px;
+ 
+}
+
+
+
+
 
 nav {
  
@@ -24,6 +43,7 @@ nav {
   display: inline-block;
   padding-left: 780px;
   width: 100%;
+  
 }
  
 
@@ -66,7 +86,7 @@ nav li:active {
   color: white;
   font-size: 40px;
  padding-left: 500px;
- padding-top: 200px;
+ padding-top: 250px;
 }
 
 .input-box {
