--- a/kazi-skillset-client/src/App.css
+++ b/kazi-skillset-client/src/App.css
@@ -6,33 +6,138 @@
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.section-1{
+  background-size: cover;
+  background-image: url(/src/images/background2.webp);
+  width: 100%;
+  min-height: 600px;
+  margin-top: -60px;
+ 
+}
+
+
+.section-2{
+  padding-top: 10px;
+ 
+}
+
+nav {
+ 
+  top: 0;
+  left: 0;
+  right: 0;
+
+  height: 50px;
+  display: inline-block;
+  padding-left: 780px;
+  width: 100%;
+  
+}
+ 
+
+
+nav li {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  margin: 0 1rem;
+  text-decoration: none;
+  font-size: 1.2em;
+  color: black;
+  border-bottom: 2px solid white;
+  transition: 0.1s;
+}
+
+nav li:hover,
+nav li:active {
+  color: tomato;
+  border-bottom: 2px solid tomato;
+}
+
+.logo{
+  color: rgb(0, 0, 0);
+  margin-top: -30px;
+  margin-left: -760px;
+}
+
+.logbuttons{
+  margin-left: 250px;
+  margin-top: -72px;
+}
+
+.navlinks{
+  margin-left: -370px;
+  margin-top: 10px;
+  
+}
+
+.text1 p { 
   color: white;
+  font-size: 40px;
+ padding-left: 500px;
+ padding-top: 250px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.input-box {
+  left: 20%;
+  position: relative;
+  height: 50px;
+  max-width: 700px;
+  width: 100%;
+  background: #fff;
+  margin: 0 20px;
+  border-radius: 15px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.input-box i,
+.input-box .button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.input-box i {
+  left: 20px;
+  font-size: 30px;
+  color: #707070;
+}
+.input-box input {
+  height: 100%;
+  width: 100%;
+  outline: none;
+  font-size: 18px;
+  font-weight: 400;
+  border: none;
+  padding: 0 155px 0 65px;
+  background-color: transparent;
+}
+.input-box .button {
+  right: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  border: none;
+  width: 100px;
+  border-radius: 15px;
+  background-color: #4070f4;
+  cursor: pointer;
+  height: 40px;
+}
+.input-box .button:active {
+  transform: translateY(-50%) scale(0.98);
 }
