--- a/kazi-skillset-client/src/index.css
+++ b/kazi-skillset-client/src/index.css
@@ -134,4 +134,43 @@ nav li:active {
   transform: translateY(-50%) scale(0.98);
 }
 
+.searchBar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.miniBar {
+  width: 500px;
+  height: 35px;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 2px;
+  font-size: 16px;
+  outline: none;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.1);
+}
+
+.miniBtn {
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 35px;
+  background-color: #f8f9fa;
+  border: none;
+  border-radius: 2px;
+  margin-left: -40px;
+  outline: none;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.miniBtn:hover {
+  background-color: #e6e6e6;
+}
+
+.fa-search {
+  color: #606060;
+  font-size: 18px;
+}
 
