--- a/kazi-skillset-client/src/index.css
+++ b/kazi-skillset-client/src/index.css
@@ -138,6 +138,8 @@ nav li:active {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .miniBar {
@@ -156,7 +158,7 @@ nav li:active {
   justify-content: center;
   width: 40px;
   height: 35px;
-  background-color: #f8f9fa;
+  /* background-color: #f8f9fa; */
   border: none;
   border-radius: 2px;
   margin-left: -40px;
@@ -174,3 +176,7 @@ nav li:active {
   font-size: 18px;
 }
 
+.nav-item {
+  margin-left: 140px;
+  cursor: pointer;
+}
