--- a/kazi-skillset-client/src/App.css
+++ b/kazi-skillset-client/src/App.css
@@ -1,143 +1,42 @@
-.App {
-  text-align: center;
+
+#people, #messages {
+    overflow-y: scroll;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- 
+#people::-webkit-scrollbar, #messages::-webkit-scrollbar {
+    background-color: transparent;
+    width: 4px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#people::-webkit-scrollbar-thumb, #messages::-webkit-scrollbar-thumb {
+    background-color: rgb(46, 228, 228);
 }
 
-.section-1{
-  background-size: cover;
-  background-image: url(/src/images/background2.webp);
-  width: 100%;
-  min-height: 600px;
-  margin-top: -60px;
- 
-}
-
-
-.section-2{
-  padding-top: 10px;
- 
-}
-
-nav {
- 
-  top: 0;
-  left: 0;
-  right: 0;
-
-  height: 50px;
-  display: inline-block;
-  padding-left: 780px;
-  width: 100%;
-  
-}
- 
-
-
-nav li {
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  margin: 0 1rem;
-  text-decoration: none;
-  font-size: 1.2em;
-  color: black;
-  border-bottom: 2px solid white;
-  transition: 0.1s;
-}
-
-nav li:hover,
-nav li:active {
-  color: tomato;
-  border-bottom: 2px solid tomato;
-}
-
-.logo{
-  color: rgb(0, 0, 0);
-  margin-top: -30px;
-  margin-left: -760px;
-}
-
-.logbuttons{
-  margin-left: 250px;
-  margin-top: -72px;
-}
-
-.navlinks{
-  margin-left: -370px;
-  margin-top: 10px;
-  
-}
-
-.text1 p { 
-  color: white;
-  font-size: 40px;
- padding-left: 500px;
- padding-top: 250px;
-}
-
-.input-box {
-  left: 20%;
-  position: relative;
-  height: 50px;
-  max-width: 700px;
-  width: 100%;
-  background: #fff;
-  margin: 0 20px;
-  border-radius: 15px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-
-}
-.input-box i,
-.input-box .button {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.input-box i {
-  left: 20px;
-  font-size: 30px;
-  color: #707070;
-}
-.input-box input {
-  height: 100%;
-  width: 100%;
-  outline: none;
-  font-size: 18px;
-  font-weight: 400;
-  border: none;
-  padding: 0 155px 0 65px;
-  background-color: transparent;
-}
-.input-box .button {
-  right: 20px;
-  font-size: 16px;
-  font-weight: 400;
-  color: #fff;
-  border: none;
-  width: 100px;
-  border-radius: 15px;
-  background-color: #4070f4;
-  cursor: pointer;
-  height: 40px;
-}
-.input-box .button:active {
-  transform: translateY(-50%) scale(0.98);
-}
+.title {
+        cursor: pointer;
+        margin-top: 0;
+        text-transform: uppercase;
+        background-image: linear-gradient(
+            -225deg,
+            red 0%,
+            orange 12%,
+            rgb(0, 30, 255) 25%,
+            rgb(44, 47, 44) 45%,
+            blue 67%,
+            indigo 80%,
+            violet 100%);
+        background-size: auto auto;
+        background-clip: border-box;
+        background-size: 200% auto;
+        color: white;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: textclip 5s linear infinite;
+    }
+    @keyframes textclip {
+      to{
+          background-position: 200% center;
+      }
+    }
