--- a/kazi-skillset-client/src/index.css
+++ b/kazi-skillset-client/src/index.css
@@ -7,9 +7,12 @@ code {
     monospace;
 }
 
+.signup-form input {
+  outline: none;
+}
+
 .section-1{
   background-size: cover;
-  background-image: url(/src/images/background2.webp);
   width: 100%;
   min-height: 600px;
   margin-top: -60px;
@@ -20,11 +23,6 @@ code {
 .section-2{
   padding-top: 10px;
  
-}
-
-
-.prof-details{
-  display:flex;
 }
 
 
