--- a/kazi-skillset-client/src/App.css
+++ b/kazi-skillset-client/src/App.css
@@ -40,3 +40,6 @@
           background-position: 200% center;
       }
     }
+    /* .navigationbar {
+        background-image: linear-gradient(180deg ,transparent, rgba(0, 0, 0, 0.504));
+    } */
